--- a/MultivariateLinearRegression.ipynb
+++ b/MultivariateLinearRegression.ipynb
@@ -14,15 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error:  5.4877338558355895\n",
-      "Relative Squared Error:  2.0725646392249235\n"
+      "Root Mean Squared Error:  5.168595250552843\n",
+      "Relative Squared Error:  1.6924577003796224\n"
      ]
     }
    ],
@@ -65,6 +65,23 @@
     "\n",
     "RSE = evaluateRSE(yPred, yTest)\n",
     "print(\"Relative Squared Error: \", RSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Testing\")"
    ]
   }
  ],
