Testing against sk-learn's linear regression

--- a/MultivariateLinearRegression.ipynb
+++ b/MultivariateLinearRegression.ipynb
@@ -2,27 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.datasets import load_iris"
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MLEmean(X, y):\n",
+    "    #y will be 0 or 1\n",
+    "\n",
+    "    mu = np.zeros(shape = (len(X[0])))\n",
+    "    for i in range(len(X)):\n",
+    "        if y[i] == 1:\n",
+    "            mu += X[i]\n",
+    "\n",
+    "    return mu/sum(y)\n",
+    "\n",
+    "def MLEcov(X, y):\n",
+    "    mu = MLEmean(X, y)\n",
+    "    covMat = np.zeros(shape = (len(X[0]), len(X[0])))\n",
+    "    for i in range(len(X)):\n",
+    "        covMat += np.outer(X[i] - mu, X[i] - mu) * y[i]\n",
+    "    \n",
+    "    return covMat/sum(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root Mean Squared Error:  5.168595250552843\n",
-      "Relative Squared Error:  1.6924577003796224\n"
+      "Root Mean Squared Error:  1.1873213158581997\n",
+      "Relative Squared Error:  0.07197879311392319\n"
      ]
     }
    ],
@@ -44,16 +71,24 @@
     "\n",
     "y = yFunction(data)\n",
     "\n",
-    "w = MultivariateLinearRegression(data, y)\n",
+    "# mean = MLEmean(data, [1 for i in range(len(data))])\n",
+    "# covMat = MLEcov(data, [1 for i in range(len(data))])\n",
     "\n",
-    "testData = np.random.rand(100, 4)\n",
-    "yTest = yFunction(testData).reshape(-1, 1)\n",
+    "XTrain, XTest, yTrain, yTest = train_test_split(data, y)\n",
     "\n",
-    "XTest = np.zeros((len(testData), len(testData[0])+1))\n",
-    "XTest[:,0] = 1\n",
-    "XTest[:,1:] = testData\n",
+    "w = MultivariateLinearRegression(XTrain, yTrain)\n",
     "\n",
-    "yPred = np.matmul(XTest, w)\n",
+    "# testData = np.random.rand(100, 4)\n",
+    "# yTest = yFunction(testData).reshape(-1, 1)\n",
+    "\n",
+    "\n",
+    "XVerify = np.zeros((len(XTest), len(XTest[0])+1))\n",
+    "XVerify[:,0] = 1\n",
+    "XVerify[:,1:] = XTest\n",
+    "\n",
+    "yPred = np.matmul(XVerify, w)\n",
+    "\n",
+    "yTest = yTest.reshape(len(yTest), 1)\n",
     "\n",
     "rootMeanSquaredError = np.sqrt(np.mean((yPred - yTest)**2))\n",
     "print(\"Root Mean Squared Error: \", rootMeanSquaredError)\n",
@@ -68,8 +103,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing against Scikit-Learn"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scikit Learn\n",
+      "\n",
+      "Against different dataset\n",
+      "Relative Squared Error Sklearn:  0.07197879311392297\n",
+      "Root Mean Squared Error:  1.187321315858198\n",
+      "\n",
+      "Against same data as in training\n",
+      "Relative Squared Error Sklearn:  0.07094259917761225\n",
+      "Root Mean Squared Error:  1.0668106887164566\n",
+      "\n",
+      "My Implementation\n",
+      "\n",
+      "Against different dataset\n",
+      "Relative Squared Error:  0.07197879311392319\n",
+      "Root Mean Squared Error:  1.1873213158581997\n",
+      "\n",
+      "Against same data as in training\n",
+      "Relative Squared Error:  0.0709425991776123\n",
+      "Root Mean Squared Error:  1.0668106887164568\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Scikit Learn\")\n",
+    "print(\"\\nAgainst different dataset\")\n",
+    "#Test against sklearn\n",
+    "reg = LinearRegression().fit(XTrain, yTrain)\n",
+    "yPredSklearn = reg.predict(XTest).reshape(-1, 1)\n",
+    "RSESklearn = evaluateRSE(yPredSklearn, yTest)\n",
+    "print(\"Relative Squared Error Sklearn: \", RSESklearn)\n",
+    "#also the rms error\n",
+    "rootMeanSquaredError = np.sqrt(np.mean((yPredSklearn - yTest)**2))\n",
+    "print(\"Root Mean Squared Error: \", rootMeanSquaredError)\n",
+    "\n",
+    "\n",
+    "print(\"\\nAgainst same data as in training\")\n",
+    "y = y.reshape(-1, 1)\n",
+    "reg = LinearRegression().fit(data, y)\n",
+    "yPredSklearn = reg.predict(data)\n",
+    "RSESklearn = evaluateRSE(yPredSklearn, y)\n",
+    "print(\"Relative Squared Error Sklearn: \", RSESklearn)\n",
+    "#also the rms error\n",
+    "rootMeanSquaredError = np.sqrt(np.mean((yPredSklearn - y)**2))\n",
+    "print(\"Root Mean Squared Error: \", rootMeanSquaredError)\n",
+    "\n",
+    "\n",
+    "print(\"\\nMy Implementation\")\n",
+    "\n",
+    "print(\"\\nAgainst different dataset\")\n",
+    "#Now the original Test train split data\n",
+    "w = MultivariateLinearRegression(XTrain, yTrain)\n",
+    "XVerify = np.zeros((len(XTest), len(XTest[0])+1))\n",
+    "XVerify[:,0] = 1\n",
+    "XVerify[:,1:] = XTest\n",
+    "yPred = np.matmul(XVerify, w)\n",
+    "\n",
+    "RSE = evaluateRSE(yPred, yTest)\n",
+    "print(\"Relative Squared Error: \", RSE)\n",
+    "#also the rms error\n",
+    "rootMeanSquaredError = np.sqrt(np.mean((yPred - yTest)**2))\n",
+    "print(\"Root Mean Squared Error: \", rootMeanSquaredError)\n",
+    "\n",
+    "#Now my model in the same way\n",
+    "print(\"\\nAgainst same data as in training\")\n",
+    "w = MultivariateLinearRegression(data, y)\n",
+    "XVerify = np.zeros((len(data), len(data[0])+1))\n",
+    "XVerify[:,0] = 1\n",
+    "XVerify[:,1:] = data\n",
+    "yPred = np.matmul(XVerify, w)\n",
+    "RSE = evaluateRSE(yPred, y)\n",
+    "print(\"Relative Squared Error: \", RSE)\n",
+    "#also the rms error\n",
+    "rootMeanSquaredError = np.sqrt(np.mean((yPred - y)**2))\n",
+    "print(\"Root Mean Squared Error: \", rootMeanSquaredError)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
